force-app/main/default/objects/Log__e/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <label>Running User</label>
    <length>120</length>
    <type>Text</type>
</CustomField>