force-app/main/default/objects/Log__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>